Created Outer repo for an interface with the outer world. New changes to the rest.

--- a/WebPoll/WebPoll/WebPoll.MVC.csproj
+++ b/WebPoll/WebPoll/WebPoll.MVC.csproj
@@ -18,6 +18,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\WebPoll.Models\WebPoll.Model.csproj" />
+    <ProjectReference Include="..\WebPoll.OuterRepository\WebPoll.OuterRepository.csproj" />
     <ProjectReference Include="..\WebPoll.RepositoryEF\WebPoll.RepositoryEF.csproj" />
     <ProjectReference Include="..\WebPoll.Repository\WebPoll.Repository.csproj" />
   </ItemGroup>
