--- a/WebPoll/WebPoll/appsettings.json
+++ b/WebPoll/WebPoll/appsettings.json
@@ -1,6 +1,7 @@
 ﻿{
 	"ConnectionStrings": {
-		"DefaultConnection": "Server=LPT-FA3420\\SQLEXPRESS;Database=WebPoll;Trusted_Connection=True;MultipleActiveResultSets=true"
+		"DefaultConnection": "Server=LPT-FA3420\\SQLEXPRESS;Database=WebPoll;Trusted_Connection=True;MultipleActiveResultSets=true",
+		"OuterConnection": "Server=LPT-FA3420\\SQLEXPRESS;Database=WebPollOuter;Trusted_Connection=True;MultipleActiveResultSets=true"
 	},
 
 	"Logging": {
