--- a/WebPoll/WebPoll.Tests/WebPoll.Tests.csproj
+++ b/WebPoll/WebPoll.Tests/WebPoll.Tests.csproj
@@ -7,16 +7,14 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.7.0" />
     <PackageReference Include="Moq" Version="4.8.2" />
-    <PackageReference Include="xunit" Version="2.3.1" />
-    <PackageReference Include="xunit.runner.visualstudio" Version="2.3.1" />
+    <PackageReference Include="NUnit" Version="3.10.1" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\WebPoll.Models\WebPoll.Model.csproj" />
+    <ProjectReference Include="..\WebPoll.RepositoryEF\WebPoll.RepositoryEF.csproj" />
     <ProjectReference Include="..\WebPoll.Repository\WebPoll.Repository.csproj" />
-    <ProjectReference Include="..\WebPoll\WebPoll.MVC.csproj" />
   </ItemGroup>
 
 </Project>
