--- a/WebPoll/WebPoll.Web/appsettings.json
+++ b/WebPoll/WebPoll.Web/appsettings.json
@@ -1,7 +1,7 @@
 ﻿{
 	"ConnectionStrings": {
-		"DefaultConnection": "Server=LPT-FA3420\\SQLEXPRESS;Database=WebPoll;Trusted_Connection=True;MultipleActiveResultSets=true",
-		"OuterConnection": "Server=LPT-FA3420\\SQLEXPRESS;Database=WebPollOuter;Trusted_Connection=True;MultipleActiveResultSets=true"
+		"DefaultConnection": "Server=192.168.0.002;Database=WebPoll;User Id=sa;Password=saWasHere??01;Trusted_Connection=False;MultipleActiveResultSets=true",
+		"OuterConnection": "Server=192.168.0.002;Database=WebPollOuter;User Id=sa;Password=saWasHere??01;Trusted_Connection=False;MultipleActiveResultSets=true"
 	},
 	"Logging": {
 		"IncludeScopes": false,
